[gd_scene load_steps=11 format=3 uid="uid://df63mf6pojyc4"]

[ext_resource type="Script" path="res://scripts/carnivore.gd" id="1_oggtc"]
[ext_resource type="PackedScene" uid="uid://r222vtqoas2" path="res://scripts/hitbox_component.tscn" id="3_4t01k"]
[ext_resource type="PackedScene" uid="uid://mcu1qn1tuf7m" path="res://scripts/health_component.tscn" id="4_7jmam"]
[ext_resource type="Script" path="res://scripts/ViewRangeComponent.gd" id="4_jilqk"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_l3n7x"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_yxqtg"]
material = SubResource("StandardMaterial3D_l3n7x")
radius = 0.25
height = 0.75

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_65gno"]
radius = 0.25
height = 0.75

[sub_resource type="CylinderShape3D" id="CylinderShape3D_x8vkv"]
height = 1.5
radius = 5.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_m2h57"]
diffuse_mode = 3
albedo_color = Color(0, 0.639216, 0.639216, 1)

[sub_resource type="BoxMesh" id="BoxMesh_g70xx"]
material = SubResource("StandardMaterial3D_m2h57")
size = Vector3(0.35, 0.2, 0.1)

[node name="Carnivore" type="CharacterBody3D" groups=["Carnivores"]]
script = ExtResource("1_oggtc")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.375, 0)
mesh = SubResource("CapsuleMesh_yxqtg")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.375, 0)
shape = SubResource("CapsuleShape3D_65gno")
disabled = true

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("3_4t01k")]
health_component = NodePath("../HealthComponent")

[node name="Hitbox" type="CollisionShape3D" parent="HitboxComponent"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.375, 0)
shape = SubResource("CapsuleShape3D_65gno")

[node name="HealthComponent" parent="." instance=ExtResource("4_7jmam")]

[node name="ViewRangeComponent" parent="." instance=ExtResource("3_4t01k")]
script = ExtResource("4_jilqk")

[node name="ViewRange" type="CollisionShape3D" parent="ViewRangeComponent"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.375, 0)
shape = SubResource("CylinderShape3D_x8vkv")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.507, -0.2)
mesh = SubResource("BoxMesh_g70xx")

[connection signal="area_entered" from="HitboxComponent" to="." method="_on_hitbox_component_area_entered"]
[connection signal="area_entered" from="ViewRangeComponent" to="ViewRangeComponent" method="_on_area_entered"]
[connection signal="area_exited" from="ViewRangeComponent" to="ViewRangeComponent" method="_on_area_exited"]
